another section added

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>First-Assignment</title>
+    <title>Save The Community</title>
 
     <!--Google-Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -76,6 +76,40 @@
             </div>
          </div>
     </section>
+
+    <section id="gallery-section">
+        <h2>Our <span>gallery</span></h2>
+        <p>Let us all unit together and help for the people who are affected by the flood disaster</p>
+        <div class="gallery-list">
+            <li><a class="all" href="#">All</a></li>
+            <li><a href="#">Charrity</a></li>
+            <li><a href="#">Nature</a></li>
+            <li><a href="#">Wildlife</a></li>
+        </div>
+        <div class="gallery">
+            <div class="gallery-image">
+                <img src="images/donation13.jpg" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="images/donation2.jpg" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="images/donation6.jpg" alt="">
+            </div>
+        </div>
+        <div class="gallery">
+            <div class="gallery-image">
+                <img src="images/donation11.jpg" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="images/donation5.jpg" alt="">
+            </div>
+            <div class="gallery-image">
+                <img src="images/donation10.jpg" alt="">
+            </div>
+        </div>
+
+    </section>
   
     <section id="update">
         <h2>Get My Update</h2>
@@ -87,5 +121,10 @@
             </form>
         </div>
     </section>
+
+    <footer>
+        <h4>Be Humble</h4>
+        <p>Copyright © by Save The Community. All rights reserved</p>
+    </footer>
 </body>
 </html>
