--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Save The Community</title>
 
+    <!--Favicon-->
+    <link rel="shortcut icon" href="icons/favicon.png" type="image/x-icon">
+
     <!--Google-Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -108,7 +111,6 @@
                 <img src="images/donation10.jpg" alt="">
             </div>
         </div>
-
     </section>
   
     <section id="update">
