--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <p>Creating a regular update for donors can encourage repeat donation. How to update and display donation collection updates. Please enter your e-mail address and subscribe</p>
         <div class="form-section">
             <form action="">
-                <input type="e-mail" placeholder="E-mail">
+                <input type="email" placeholder="E-mail">
                 <a class="donate-btn" target="_blank" href="#">Subscribe</a>
             </form>
         </div>
@@ -128,5 +128,6 @@
         <h4>Be Humble</h4>
         <p>Copyright © by Save The Community. All rights reserved</p>
     </footer>
+    
 </body>
 </html>
