--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!--Google-Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital@1&family=Montserrat&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital@1&family=Montserrat:ital@0;1&family=Roboto:ital,wght@1,900&display=swap" rel="stylesheet">
     <!--Our Css-->
     <link rel="stylesheet" href="style.css">
 </head>
@@ -126,6 +126,7 @@
 
     <footer>
         <h4>Be Humble</h4>
+        <small>I'm gonna do it</small>
         <p>Copyright © by Save The Community. All rights reserved</p>
     </footer>
 
