--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <section id="donate-section">
         <div class="donate-text">
             <h2>Donate Today</h2>
-            <p>You can a save a child's life by donation. It does not matter what you donate, may your 10tk will be save one family hunger</p>
+            <p>Your 100TK donation can save a family life</p>
         </div>
         <div class="amount">
             <div class="donation">
@@ -60,22 +60,22 @@
 
     <section id="donate-plan-section">
         <h2>Our Donate Plan</h2>
-        <p>We will devide our donation in three ways</p>
+        <p>We have devided our donation in three ways</p>
          <div class="card-section">
             <div class="card card-one">
                 <img src="icons/food.png" alt="">
                 <h3>Food for a family</h3>
-                <p>Many people has died for hunger, so we have have planed that, we also donate a part of the donation to the hungry people</p>
+                <p>Many people has died for hunger, so we have planed that we will donate a part of the donation to the hungry people</p>
             </div>
             <div class="card card-two">
                 <img src="icons/shelter.png" alt="">
                 <h3>Shelter for a family</h3>
-                <p>Many people has lost their house, property etc. They lost evrything, we also donate a part of the donation to the hungry people</p>
+                <p>Donate to homeless people who has lost their house, property, business. Beacause shelter is a basic human need for servival</p>
             </div>
             <div class="card card-three">
                 <img src="icons/Frame-1.png" alt="">
                 <h3>Education for a family</h3>
-                <p>Many people has died for hunger, so we have have planed that, we also donate a part of the donation to the hungry people</p>
+                <p>Children are deprived of education for flood. We also donate a part of the donation for education</p>
             </div>
          </div>
     </section>
