style added and modified

--- a/index.html
+++ b/index.html
@@ -85,9 +85,8 @@
         <p>Let us all unit together and help for the people who are affected by the flood disaster</p>
         <div class="gallery-list">
             <li><a class="all" href="#">All</a></li>
-            <li><a href="#">Charrity</a></li>
-            <li><a href="#">Nature</a></li>
-            <li><a href="#">Wildlife</a></li>
+            <li><a href="#">Donation</a></li>
+            <li><a href="#">Humanlife</a></li>
         </div>
         <div class="gallery">
             <div class="gallery-image">
