--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
             </div>
         </div>
         <div class="other-amount">
-            <p>Other Amount (Taka)</p>
-            <hr>
+            <input type="text" placeholder="Other Amount (Taka)">
         </div>
         <div class="donate">
             <a class="donate-btn" target="_blank" href="#">Donate Now</a>
